fix alignments

--- a/frontend/assets/sass/nomad-ui.scss
+++ b/frontend/assets/sass/nomad-ui.scss
@@ -87,3 +87,11 @@ dd, dt {
 .btn.no-border {
 	padding: 0
 }
+
+.content-header {
+	padding-bottom: 15px;
+}
+
+.card {
+	padding-left: 15px;
+}
