--- a/frontend/assets/sass/nomad-ui/_responsive.scss
+++ b/frontend/assets/sass/nomad-ui/_responsive.scss
@@ -142,7 +142,7 @@
         width: 100%;
 
         > .content{
-            padding: 15px 0px;
+            padding: 0px 0px;
         }
 
         .card{
