--- a/frontend/assets/sass/nomad-ui/_sidebar-and-main-panel.scss
+++ b/frontend/assets/sass/nomad-ui/_sidebar-and-main-panel.scss
@@ -231,7 +231,7 @@
     min-height: 100%;
 
     > .content{
-        padding: 30px 15px;
+        padding: 30px 0px;
         min-height: calc(100% - 136px);
     }
 
@@ -259,18 +259,4 @@
     -webkit-transition-timing-function: linear,linear;
     transition-timing-function: linear,linear;
     -webkit-overflow-scrolling: touch;
-}
-
-// windows os settings
-.sidebar .sidebar-wrapper,
-.main-panel{
-    overflow: hidden;
-}
-
-// mac os settings
-.mac-os{
-    .sidebar .sidebar-wrapper,
-    .main-panel{
-        overflow: auto;
-    }
 }
